# devan

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  NEXT_SESSION.md  README.md  SECURITY.md  benchmark_sample.jsonl  docker-compose.yml  run_benchmark.py  setup.sh
.github/: dependabot.yml
.github/workflows/: dependabot-automerge.yml
benchmark/: questions.jsonl  setup.sh
client/: .gitignore  QUICKSTART.md  README.md  _test_docling.py  _test_ocr.py  _test_pdf.py  app.py  config.example.json  requirements.txt  start.sh
client/kb_data/: indexer.db  sessions.json
client/templates/: index.html
docker/: entrypoint.sh
docs/: MCP_CLIENT_UI_SUMMARY.md  hermes-integration.md  index.html  license-audit.md  public_readme_draft.md  tauri-desktop-app.md  vscode-mcp-setup.md
hermes/: .gitignore  README.md  config.yaml.template  install.sh
servers/data-modelling/mcp_project/: data_modelling_server.py  extractors.py  models.py  pyproject.toml  services.py  tools.py
servers/document/mcp_project/: document_server.py  pyproject.toml
servers/excel-pipeline/: .gitignore  README.md
servers/excel-pipeline/mcp_project/: excel_pipeline_server.py  models.py  pyproject.toml  services.py  tools.py
servers/excel-pipeline/tests/: test_excel_pipeline.py
servers/excel-retriever/: KNOWLEDGE_ENHANCED_EXTRACTION.md  README.md  TEST_REPORT.md  create_complex_sample.py  create_sample_data.py  demo_instructions.md  demo_notebook.ipynb  excel_server.py  generate_test_files.py  pyproject.toml  run_comprehensive_tests.py  test_results.json
servers/excel-retriever/excel_files/: complex_sample.xlsx  equipment_inventory.xlsx  test_10_mixed_data_types.xlsx  test_1_simple_table.xlsx  test_2_multi_table_gaps.xlsx  test_3_formulas.xlsx  test_4_merged_cells.xlsx  test_5_with_charts.xlsx  test_6_empty_rows_cols.xlsx  test_7_financial_statement.xlsx  test_8_scientific_data.xlsx  test_9_pivot_like.xlsx
servers/excel-retriever/mcp_project/: excel_server.py  pyproject.toml  smart_extractor.py
servers/guardrail/: ARCHITECTURE.md  CI_CD_INTEGRATION.md  MEETING_PRESENTATION.md  README.md  VS_CODE_INTEGRATION.md
servers/guardrail/examples/: example1_code_scanner.py  example2_secret_detection.py  example3_ai_validation.py  example4_extended_patterns.py
servers/guardrail/mcp_project/: guardrail_server.py  pyproject.toml
servers/indexer/: README.md
servers/indexer/mcp_project/: indexer_server.py  pyproject.toml
servers/pdf-extractor/: README.md
servers/pdf-extractor/mcp_project/: pdf_extractor_server.py  pyproject.toml
servers/prompt-engineering/: PROMPT_LIBRARY_GUIDE.md  README.md  create_sample_pdfs.py  demo_instructions.md  demo_notebook.ipynb
servers/prompt-engineering/mcp_project/: prompt_server.py  pyproject.toml
servers/webdesign/: DEPLOY_AZURE.md  DEPLOY_MAC_DOCKER.md  README.md  ROADMAP.md  demo_instructions.md  demo_notebook.ipynb
servers/webdesign/mcp_project/: pyproject.toml  webdesign_server.py
servers/webdesign/prototype/: index.html
servers/webscraper/: PLAN.md  README.md
servers/webscraper/mcp_project/: exporters.py  job_manager.py  pyproject.toml  webscraper_server.py
servers/webscraper/mcp_project/engines/: base.py  bs4_engine.py  firecrawl_engine.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/ui/: icon_preview.html  index.html  setup.html  splash_bear.html  splash_polar_bear.html
systems/devan/: adapter.py
