[project]
name = "data-modelling-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "openpyxl>=3.1.5",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0",
    "lxml>=6.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "pytest-cov>=4.0"]

[tool.uv]
python-downloads = "manual"
