[project]
name = "document-mcp"
version = "1.0.0"
description = "Unified Document MCP Server — Excel, PDF, and Word processing for LLM & RAG pipelines"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27.0",
    # Excel
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    # PDF (lightweight extraction; docling adds OCR/table detection but pulls in torch)
    "pypdf>=6.10.2",
    # Word
    "python-docx>=1.2.0",
    # AI (OCR + figure descriptions)
    "anthropic>=0.97.0",
]

[project.optional-dependencies]
# Full OCR + deep table extraction (installs torch ~2GB — not needed for Docker builds)
docling = [
    "docling>=2.91.0",
]
opensearch = [
    "opensearch-py>=3.2.0",
]
parquet = [
    "pyarrow>=24.0.0",
    "pandas>=2.3.3",
]
dev = [
    "pytest>=9.0.3",
    "black>=26.3.1",
    "ruff>=0.15.12",
]

[tool.uv]
python-downloads = "manual"
