[project]
name = "indexer"
version = "0.1.0"
description = "SQLite-backed chunk indexer with citation-aware Q&A — DEVAN MCP server"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27.0",
]

[project.optional-dependencies]
synthesis = ["anthropic>=0.97.0"]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
