[project]
name = "pdf-extractor-mcp"
version = "1.0.0"
description = "Production-grade PDF extraction MCP server for LLM and RAG pipelines"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.26.0",
    "docling>=2.0.0",
    "pypdf>=4.0.0",
    "anthropic>=0.40.0",
]

[tool.uv]
python-downloads = "manual"
