[project]
name = "prompt-mcp-demo"
version = "0.1.0"
description = "MCP Server for PDF report generation using structured prompt engineering patterns"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.26.0",
    "docling>=2.0.0",
]

[project.optional-dependencies]
pdf = [
    "PyPDF2>=3.0.0",
]
dev = [
    "pytest>=7.0",
    "reportlab>=4.0.0",
]

[tool.uv]
python-downloads = "manual"
