[project]
name = "webdesign-mcp"
version = "0.1.0"
description = "MCP Server for automated React web design with design system generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
]

[tool.uv]
python-downloads = "manual"
